[gd_scene load_steps=5 format=3 uid="uid://v0nrugmi2uv3"]

[ext_resource type="Script" path="res://weapons/spear.gd" id="1_k1vwh"]
[ext_resource type="Texture2D" uid="uid://p3wqvq0fvkgv" path="res://art/weapons/spear_teal.png" id="2_t3j2r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8unpq"]
radius = 440.073

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4aaj7"]
size = Vector2(382, 65)

[node name="Spear" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_k1vwh")

[node name="Range" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8unpq")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="Weapon_pivot" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Area2D" type="Area2D" parent="Weapon_pivot"]
collision_layer = 0
collision_mask = 2

[node name="Weapon_collision" type="CollisionShape2D" parent="Weapon_pivot/Area2D"]
unique_name_in_owner = true
position = Vector2(197, -1.5)
shape = SubResource("RectangleShape2D_4aaj7")
debug_color = Color(0.986195, 0, 0.3261, 0.42)

[node name="Sprite2D" type="Sprite2D" parent="Weapon_pivot"]
position = Vector2(150, 0)
texture = ExtResource("2_t3j2r")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
